--- a/config/translations/nl.json
+++ b/config/translations/nl.json
@@ -1,6 +1,10 @@
 {
-    "document-title" :          "Pleisterman Alien-Invasion",
-    "document-description" :    "Alien Invasion is een spel geinspireerd door Space Invaders. Het is gemaakt met Phaser2",
-    "document-keywords" :       "Pleisterman, Phaser, Experimenten",
-    "document-no-js" :          "U heeft Javascript uitgeschakeld.<br>Deze pagina heeft Javascript nodig om goed te werken.<br> Zet u alstublieft Javascript aan en herlaad de pagina."
+    "documentTitle" :               "Alien-Invasion",
+    "documentDescription" :         "Alien Invasion is een spel geinspireerd door Space Invaders. Het is gemaakt met Phaser2",
+    "documentKeywords" :            "Project, Phaser, Bootstrap, Responsive",
+    "documentNoJs" :                "U heeft Javascript uitgeschakeld.<br>Deze pagina heeft Javascript nodig om goed te werken.<br> Zet u alstublieft Javascript aan en herlaad de pagina.",
+    "options" :                     "Opties",
+    "highScores" :                  "Highscores",
+    "about" :                       "About",
+    "changeOrientationMessage" :    "Draai het scherm om het menu weer te geven."
 }
